code, message or one-liner message) appear in each output destination.

*** Dynamic column sizing in diagnostic listings.
The tabulated listings produced by 'flymake-show-buffer-diagnostics' and
'flymake-show-project-diagnostics' now automatically adjust their column
widths based on content, optimizing display space and readability.

*** New user option 'elisp-flymake-byte-compile-executable'.
This allows customizing the Emacs executable used for Flymake byte
compilation in 'emacs-lisp-mode'.  This option should be set when editing
Lisp code which will run with a different Emacs version than the running
Emacs, such as code from an older or newer version of Emacs.  This will
provide more accurate warnings from byte compilation.

** SQLite

+++
*** SQLite databases can now be opened in read-only mode.
The new optional argument READONLY to 'sqlite-open' function allows to
open an existing database only for reading.

*** 'sqlite-open' now recognizes 'file://' URIs as well as file names.
The 'file://' URIs are supported by default.  In the unusual case that a
normal file name starts with "file:", you can disable the URI
recognition by invoking 'sqlite-open' with the new optional argument
DISABLE-URI non-nil.

** GUD

+++
*** 'pdb', 'perldb', and 'guiler' suggest debugging the current file via 'M-n'.
When starting these debuggers (e.g., 'M-x pdb') while visiting a file,
pressing 'M-n' in the command prompt suggests a command line including
the file name, using the minibuffer's "future history".

** Calendar

+++
*** New command 'calendar-recenter'.
This command recenters the month of the date at point.  By default, it
is bound to 'C-l' in the calendar buffer.

---
*** Mouse wheel bindings for scrolling the calendar.
You can now use the mouse wheel to scroll the calendar by 3 months.
With the shift modifier, it scrolls by one month.  With the meta
modifier, it scrolls by year.

*** Simpler key bindings for navigation in calendar by months and by years.